<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:contentDescription="@string/main"
        android:id="@+id/view_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafa"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_toolbar"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton_back"
                style="@style/Widget.AppCompat.ActionButton"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/back"
                android:layout_width="wrap_content"
                android:minWidth="65dp"
                android:layout_height="match_parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:lines="1"
                android:text="@string/single_color"
                android:gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginStart="8dp"/>

            <ImageButton
                android:contentDescription="@string/favorite"
                android:id="@+id/imageButton_favorite"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_favorite_border_black_24dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:background="?attr/selectableItemBackground"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    android:id="@+id/textView_rgb"
                    android:layout_width="0dp"
                    android:text="@string/rgb_code"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center" />

                <com.google.android.material.textview.MaterialTextView
                    android:background="?attr/selectableItemBackground"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    android:id="@+id/textView_hex"
                    android:layout_width="0dp"
                    android:text="@string/hex_code"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/red"
                    android:textColor="@android:color/primary_text_light"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:max="255"
                    android:progress="0"
                    android:id="@+id/seekBar_red"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/green"
                    android:textColor="@android:color/holo_green_dark"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:progress="100"
                    android:max="255"
                    android:id="@+id/seekBar_green"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/blue"
                    android:textColor="@android:color/holo_blue_dark"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:max="255"
                    android:id="@+id/seekBar_blue"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:progress="255"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/alpha"
                    android:textColor="@android:color/black"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:max="255"
                    android:id="@+id/seekBar_alpha"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:progress="255"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>