<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:paddingBottom="16dp"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/view_color"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/holo_red_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    android:id="@+id/textView_rgb"
                    android:layout_width="0dp"
                    android:text="@string/rgb_code"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center" />

                <com.google.android.material.textview.MaterialTextView
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    android:id="@+id/textView_hex"
                    android:layout_width="0dp"
                    android:text="@string/hex_code"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/red"
                    android:textColor="@android:color/primary_text_light"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:max="255"
                    android:progress="0"
                    android:id="@+id/seekBar_red"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/green"
                    android:textColor="@android:color/holo_green_dark"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:progress="100"
                    android:max="255"
                    android:id="@+id/seekBar_green"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/blue"
                    android:textColor="@android:color/holo_blue_dark"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:max="255"
                    android:id="@+id/seekBar_blue"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:progress="255"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/alpha"
                    android:textColor="@android:color/black"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:max="255"
                    android:id="@+id/seekBar_alpha"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:progress="255"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>